# retail-agent-shopping-ap2-ucp

./: .drone.yml  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  USER_GUIDE.md  docker-compose.yml  makefile  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
assistant/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
assistant/config/: config.json  config_loader.py
assistant/db/: mdb.py
backend/: .env.example  Dockerfile  README.md  __init__.py  agents_manager.py  main.py  pyproject.toml  start.sh  test_imports.py  test_integration.py
backend/agents/ap2/types/: mandate.py  payment_request.py
backend/agents/common/: base_server_executor.py  genai_client_manager.py  mandate_ledger_client.py  validation.py  watch_log.py
backend/agents/roles/auditor_agent/: __main__.py  agent.json  agent.py  tools.py
backend/agents/roles/credentials_provider_agent/: __main__.py  agent_executor.py  tools.py
backend/agents/roles/merchant_agent/: __main__.py  agent_executor.py  storage.py  tools.py
backend/agents/roles/merchant_agent/sub_agents/: catalog_agent.py
backend/agents/roles/merchant_payment_processor_agent/: __main__.py  agent_executor.py  tools.py
backend/agents/roles/shopping_agent/: agent.py  remote_agents.py  tools.py
backend/agents/roles/shopping_agent/subagents/payment_method_collector/: agent.py  tools.py
backend/agents/roles/shopping_agent/subagents/shipping_address_collector/: agent.py  tools.py
backend/agents/roles/shopping_agent/subagents/shopper/: agent.py  tools.py
backend/config/: config.json  config_loader.py
backend/routers/: auditor_router.py  mandate_ledger.py  shopping_router.py
backend/voyageai/: voyage_ai_embeddings.py
docs/: UCP_AP2_INTEGRATION.md
environment/: production.yaml  staging.yaml
example/: README.md  pyproject.toml
example/card_flow/: .env.example  README.md  run.sh  setup_ledger_env.sh
example/src/common/: mandate_ledger_client.py
example/src/roles/auditor_agent/: agent.py  tools.py
example/src/roles/merchant_agent/: storage.py  tools.py
example/src/roles/merchant_agent/sub_agents/: catalog_agent.py
example/src/roles/shopping_agent/: agent.py  tools.py
example/src/roles/shopping_agent/subagents/shopper/: tools.py
example/ucp_flow/: README.md  run.sh
example/ucp_flow/auditor_agent/: __init__.py  agent.py  tools.py
example/ucp_flow/merchant_server/: __init__.py  __main__.py  catalog.py  checkout.py  server.py  storage.py  well_known.py
example/ucp_flow/shopper_agent/: __init__.py  agent.py  tools.py  ucp_client.py
frontend/: EXAMPLE.env  README.md  package-lock.json  package.json
frontend/app/: ClientProvider.js  layout.js  page.js  providers.js
frontend/app/api/assistant-step-calculation/: route.js
frontend/app/api/auditor-chat/: route.js
frontend/app/journey/: journey.css  layout.jsx
frontend/app/test/: layout.jsx  page.jsx
frontend/components/BehindTheScenes/: ImageContainer.jsx  behindTheScenes.css  componentMap.js
frontend/components/ChatbotContainer/: ChatbotContainer.jsx
frontend/components/DetailsSidebar/: DetailsSidebar.jsx  EmptyStateMessage.jsx  StageNotImplementedFallback.jsx
frontend/components/GuidedIntro/: GuidedIntro.jsx  GuidedIntroManager.jsx
frontend/components/MessageBubble/: AgentThinking.jsx  MessageBubble.jsx  MessageBubble.module.css
frontend/components/OrderSelectionModal/: OrderSelectionModal.jsx
frontend/components/ProfileSelection.jsx/: ProfileSelection.jsx
frontend/components/ShoppingAssistantNavbar/: ShoppingAssistantNavbar.jsx
frontend/lib/: api.js  chatOptions.js  helpers.js  mongo-apis.js  mongodb.js
frontend/lib/const/: bubbleDetails.js  data.js  steps.js  ux-writing.js
frontend/lib/constants/: messages.js
frontend/redux/: store.js
frontend/redux/slices/: GlobalSlice.js  MandateLedgerSlice.js
frontend/utils/style/: LEAFYGREEN-UI-GUIDE.md
mandate_ledger_service/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
mandate_ledger_service/docs/: API_REFERENCE.md  BOOTSTRAP_AUTH_SETUP.md
mandate_ledger_service/scripts/: setup_agent_keys.py  setup_mongodb_replica_set.sh
mandate_ledger_service/src/: __init__.py  config.py  main.py
mandate_ledger_service/src/api/: __init__.py  dependencies.py
mandate_ledger_service/src/api/routes/: __init__.py  admin.py  audit.py  auth.py  mandates.py  payments.py
mandate_ledger_service/src/core/: __init__.py  change_streams.py  errors.py  hashing.py  monitoring.py  state_machine.py
mandate_ledger_service/src/db/: __init__.py  collections.py  indexes.py  mongodb.py
mandate_ledger_service/src/listeners/: __init__.py  payment_listener.py
mandate_ledger_service/src/models/: __init__.py  admin.py  audit.py  auth.py  common.py  enums.py  mandate.py  payment.py
mandate_ledger_service/src/repositories/: __init__.py  audit_repository.py  auth_repository.py  base_repository.py  consistency_repository.py  idempotency_repository.py  mandate_repository.py  payment_repository.py  rate_limit_repository.py
mandate_ledger_service/src/services/: __init__.py  auth_service.py  consistency_service.py  idempotency_service.py  mandate_service.py  payment_service.py
mandate_ledger_service/src/types/: __init__.py  ap2_contact.py  ap2_mandate.py  ap2_payment_request.py
mandate_ledger_service/tests/: README.md  cleanup_test_data.py  run_all_tests.sh  test_payment_apis.sh  test_payments_flow.sh  test_post_payment.sh  test_presigned_mandates.sh
mandate_ledger_service/tests/api/: test_auth.sh  test_mandates.sh
mandate_ledger_service/tests/fixtures/: cart_mandate.json  intent_mandate.json  payment_mandate.json  test_config.sh
mandate_ledger_service/tests/utils/: assertions.sh  cleanup.sh  test_helpers.sh
(+26 files in other folders)
