[project]
name = "assistant-service"
version = "0.1.0"
description = "Provides current step and reply options based on latest agent message."
authors = [{name = "Assistant", email = "devnull@example.com"}]
requires-python = ">=3.13,<3.14"
dependencies = [
    "pymongo>=4.10.1",
    "python-dotenv>=1.0.1",
    "fastapi>=0.115.4",
    "uvicorn>=0.32.0",
    "boto3>=1.35.70",
    "botocore>=1.35.70",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
