[project]
name = "backend-service"
version = "0.1.0"
description = "Backend service for the application"
authors = [{name = "Project Maintainers", email = "devnull@example.com"}]
requires-python = ">=3.13,<3.14"
dependencies = [
    "pymongo>=4.10.1",
    "python-dotenv>=1.0.1",
    "fastapi>=0.115.4",
    "uvicorn>=0.32.0",
    "a2a-sdk==0.3.4",
    "absl-py",
    "flask",
    "flask-cors",
    "google-adk==1.5.0",
    "google-genai",
    "httpx",
    "requests",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
