[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ap2-samples"
version = "0.1"
description = "Samples demonstrating the Agent Payments Protocol with Mandate Ledger"
dependencies = [
    "a2a-sdk==0.3.4",
    "absl-py",
    "flask",
    "flask-cors",
    "google-adk==1.5.0",
    "google-genai",
    "httpx",
    "requests",
    "pydantic"
]
keywords = ["payments", "a2a", "ap2", "mandate-ledger"]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
