[project]
name = "mandate-ledger-service"
version = "1.0.0"
description = "Immutable mandate ledger for Agent Payments Protocol (AP2)"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "MongoDB + Google", email = "your-email@example.com" }
]
keywords = ["ap2", "payments", "ledger", "mongodb", "blockchain"]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # MongoDB (async driver)
    "motor>=3.6.0",

    # Data validation and settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",

    # Security
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",

    # Monitoring
    "prometheus-client>=0.21.0",

    # Rate limiting
    "slowapi>=0.1.9",

    # HTTP client for testing
    "httpx>=0.27.0",

    # AP2 types (from parent project)
    # Note: This will be installed from the parent AP2 project
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",

    # Load testing
    "locust>=2.31.0",

    # Code quality
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
